Updated login.html to display credentials

--- a/src/main/resources/static/login.html
+++ b/src/main/resources/static/login.html
@@ -142,7 +142,7 @@
             </p>
         </div>
 
-        <div class="footer-text">© 2025 Your Company Name. All rights reserved by JOSHUA.</div>
+        <div class="footer-text">© 2025 JOSH Pvt LTD. All rights reserved by JOSHUA.</div>
     </div>
 
     <script src="js/login.js"></script>
