Updated login.html to display credentials

--- a/src/main/resources/static/login.html
+++ b/src/main/resources/static/login.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>Employee Leave Management - Login</title>
+    <title>Student Leave Management - Login</title>
     <link rel="stylesheet" href="css/style.css">
 
     <style>
@@ -132,11 +132,11 @@
 
         <!-- 🌟 Display Credentials -->
         <div class="credentials-box">
-            <p><strong>Manager Login:</strong><br>
+            <p><strong>Admin Login:</strong><br>
                 Email: kiran@example.com<br>
                 Password: kiran123
             </p>
-            <p><strong>Employee Login:</strong><br>
+            <p><strong>Student Login:</strong><br>
                 Email: joshua@example.com<br>
                 Password: joshua123
             </p>
