Updated login, employee, and manager dashboard pages

--- a/src/main/resources/static/employee-dashboard.html
+++ b/src/main/resources/static/employee-dashboard.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>Employee Dashboard</title>
+    <title>Student Dashboard</title>
     <link rel="stylesheet" href="css/style.css">
 </head>
 
