--- a/src/main/resources/static/employee-dashboard.html
+++ b/src/main/resources/static/employee-dashboard.html
@@ -10,7 +10,7 @@
 <body>
     <!-- Navigation Bar -->
     <div class="navbar">
-        <h2 class="title">Employee Dashboard</h2>
+        <h2 class="title">Student Dashboard</h2>
         <div class="employee-info">
             <span id="employeeName">Name: Loading...</span> |
             <span id="employeeId">ID: Loading...</span>
