--- a/src/main/resources/static/login.html
+++ b/src/main/resources/static/login.html
@@ -123,7 +123,7 @@
     <div class="login-container">
         <!-- 🏢 Logo -->
         <img src="image/Screenshot 2025-11-04 042140.png" alt="Logo">
-        <h2>Employee Leave Management</h2>
+        <h2>Student Leave Management</h2>
 
         <input type="text" id="email" placeholder="Email" />
         <input type="password" id="password" placeholder="Password" />
