Added reason column in student-dashboard and updated JS to display it

--- a/src/main/resources/static/student-dashboard.html
+++ b/src/main/resources/static/student-dashboard.html
@@ -45,12 +45,13 @@
                     <th>Type</th>
                     <th>From</th>
                     <th>To</th>
+                    <th>Reason</th>
                     <th>Status</th>
                 </tr>
             </thead>
             <tbody id="leaveHistoryBody">
                 <tr>
-                    <td colspan="5">Loading leave history...</td>
+                    <td colspan="6">Loading leave history...</td>
                 </tr>
             </tbody>
         </table>
@@ -61,7 +62,7 @@
         <button onclick="logout()">Logout</button>
     </div>
 
-    <script src="js/employee-dashboard.js"></script>
+    <script src="js/student-dashboard.js"></script>
 </body>
 
 </html>
