Added reason column in student-dashboard and updated JS to display it

--- a/src/main/resources/static/student-dashboard.html
+++ b/src/main/resources/static/student-dashboard.html
@@ -62,7 +62,7 @@
         <button onclick="logout()">Logout</button>
     </div>
 
-    <script src="js/student-dashboard.js"></script>
+    <script src="js/employee-dashboard.js"></script>
 </body>
 
 </html>
