Updated login, employee, and manager dashboard pages

--- a/src/main/resources/static/login.html
+++ b/src/main/resources/static/login.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>Student Leave Management - Login</title>
+    <title>Employee Leave Management - Login</title>
     <link rel="stylesheet" href="css/style.css">
 
     <style>
@@ -123,7 +123,7 @@
     <div class="login-container">
         <!-- 🏢 Logo -->
         <img src="image/Screenshot 2025-11-04 042140.png" alt="Logo">
-        <h2>Student Leave Management</h2>
+        <h2>Employee Leave Management</h2>
 
         <input type="text" id="email" placeholder="Email" />
         <input type="password" id="password" placeholder="Password" />
@@ -132,11 +132,11 @@
 
         <!-- 🌟 Display Credentials -->
         <div class="credentials-box">
-            <p><strong>Admin Login:</strong><br>
+            <p><strong>Manager Login:</strong><br>
                 Email: kiran@example.com<br>
                 Password: kiran123
             </p>
-            <p><strong>Student Login:</strong><br>
+            <p><strong>Employee Login:</strong><br>
                 Email: joshua@example.com<br>
                 Password: joshua123
             </p>
