--- a/src/main/resources/static/manager-dashboard.html
+++ b/src/main/resources/static/manager-dashboard.html
@@ -104,7 +104,7 @@
 
 <body>
     <div class="navbar">
-        <h2>Admin Dashboard</h2>
+        <h2>Manager Dashboard</h2>
     </div>
 
     <div class="container">
