--- a/src/main/resources/static/manager-login.html
+++ b/src/main/resources/static/manager-login.html
@@ -70,6 +70,8 @@
     </div>
 
     <script>
+        const backendBase = 'https://leavemanagementsystem-kcww.onrender.com/api';
+
         async function login() {
             const email = document.getElementById('email').value.trim();
             const password = document.getElementById('password').value.trim();
@@ -82,38 +84,32 @@
             }
 
             try {
-                const response = await fetch('http://localhost:8081/api/employees/login', {
+                const response = await fetch(`${backendBase}/auth/login`, {
                     method: 'POST',
                     headers: { 'Content-Type': 'application/json' },
                     body: JSON.stringify({ email, password })
                 });
 
-                if (response.ok) {
-                    const data = await response.json();
+                const data = await response.json();
 
-                    if (data.role === 'MANAGER') {
-                        // Save session
-                        localStorage.setItem('managerId', data.id);
-                        localStorage.setItem('managerEmail', data.email);
+                if (data.status === 'success' && data.role === 'MANAGER') {
+                    // Save manager session
+                    localStorage.setItem('managerId', data.employeeId);
+                    localStorage.setItem('managerEmail', email);
 
-                        // Handle redirect after login
-                        const params = new URLSearchParams(window.location.search);
-                        const redirect = params.get('redirect');
-
-                        if (redirect) {
-                            window.location.href = decodeURIComponent(redirect);
-                        } else {
-                            window.location.href = 'manager-dashboard.html';
-                        }
-
+                    // Redirect if ?redirect= exists
+                    const params = new URLSearchParams(window.location.search);
+                    const redirectParam = params.get('redirect');
+                    if (redirectParam) {
+                        window.location.href = decodeURIComponent(redirectParam);
                     } else {
-                        errorMsg.textContent = 'Access denied. Only managers can log in.';
+                        window.location.href = 'manager-dashboard.html';
                     }
                 } else {
-                    errorMsg.textContent = 'Invalid credentials. Please try again.';
+                    errorMsg.textContent = data.message || 'Access denied. Only managers can log in.';
                 }
-            } catch (error) {
-                console.error('Login failed:', error);
+            } catch (err) {
+                console.error('Login failed:', err);
                 errorMsg.textContent = 'Server error. Please try again later.';
             }
         }
