--- a/src/main/resources/static/login.html
+++ b/src/main/resources/static/login.html
@@ -133,12 +133,12 @@
         <!-- 🌟 Display Credentials -->
         <div class="credentials-box">
             <p><strong>Manager Login:</strong><br>
-                Email: kiran@example.com<br>
-                Password: kiran123
+                Email: joshua21h332.com<br>
+                Password: josh123
             </p>
             <p><strong>Employee Login:</strong><br>
-                Email: joshua@example.com<br>
-                Password: joshua123
+                Email: mohan@gmail.com<br>
+                Password: mohan123
             </p>
         </div>
 
