--- a/src/main/resources/static/login.html
+++ b/src/main/resources/static/login.html
@@ -133,7 +133,7 @@
         <!-- 🌟 Display Credentials -->
         <div class="credentials-box">
             <p><strong>Manager Login:</strong><br>
-                Email: joshua21h332.com<br>
+                Email: joshua21h332@gmail.com<br>
                 Password: josh123
             </p>
             <p><strong>Employee Login:</strong><br>
